fixes alignment

--- a/mycss.css
+++ b/mycss.css
@@ -9,10 +9,7 @@
 
 }
 
-.description {
-    font-weight: 400;
-    font-size: 28;
-}
+
 
 body {
     margin: 0;
@@ -47,6 +44,7 @@ body {
 }
 
 .landing {
+    margin: 20px;
     background-color: white;
     height: 100vh;
     width: 100%-40px;
@@ -60,24 +58,36 @@ body {
 }
 
 .hello {
-    font-size: 30px;
+    margin: 0;
+    font-size: 80px;
     font-weight: 400;
 }
 
 .designation {
+    font-size: 60px;
+}
+
+.content {
+    margin-top: 150px;
+    text-align: center;
     font-size: 30px;
+    font-weight: 200;
 }
 
 .landing .imglaptop {
+    margin-bottom: 40px;
     float: left;
     background-size: cover;
-    height: 700px;
+    margin-right: 40px;
+    height: 500px;
     width: 50%;
     object-fit: cover;
 }
 
 .companyName {
     color: #002D62;
+    font-size: 60px;
+    font-weight: 400;
 }
 
 .bottom {
